successfully using server.js/scrape action to pull dom object through cheerio node module

--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "A CSS Scraper",
   "devDependencies": {
     "browser-sync": "^2.8.2",
+    "cheerio": "^0.19.0",
     "express": "^4.13.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-minify-css": "*",
     "gulp-sass": "^2.0.4",
-    "gulp-watch": "^4.3.5"
+    "gulp-watch": "^4.3.5",
+    "request": "^2.61.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/bamtron5/cssScraper.git"
   }
 }
